# Screen-Recorder-Web-App

./: DEPLOYMENT.md  README.md  __init__.py  app.py  helpers.py  pyproject.toml  recorder_component.html
assets/: styles.css
